# nonebot-plugin-dcqq-relay

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: codecov.yml  release.yml  ruff.yml
nonebot_plugin_dcqq_relay/: __init__.py  config.py  dc_to_qq.py  model.py  qq_emoji_dict.py  qq_to_dc.py  utils.py
nonebot_plugin_dcqq_relay/migrations/: 5fb7a7432778_change_dcid_type.py  ca5c07252665_init_db.py
tests/: conftest.py  data.py  test_check_messages.py  test_dc_message_builder.py  test_dcqq_relay.py  test_get_dc_member_avatar.py  test_get_dc_member_name.py  test_get_file_bytes.py  test_matcher.py  test_prepare_webhooks.py  test_pydub_transform.py  test_qq_file_upload.py  test_qq_message_builder.py  test_skil_to_ogg.py  utils.py
