[project]
name = "nonebot-plugin-dcqq-relay"
version = "1.3.0"
description = "在QQ群与 Discord 之间同步消息的 nonebot2 插件"
authors = [{ name = "Autuamn_End", email = "autuamn@qq.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "nonebot2[aiohttp,fastapi]>=2.2.1,<3.0.0",
    "nonebot-adapter-onebot>=2.4.3,<3.0.0",
    "nonebot-adapter-discord>=1.1.3,<2.0.0",
    "nonebot-plugin-orm[default]>=0.8.1,<0.9.0",
    "filetype>=1.2.0,<2.0.0",
    "pydub>=0.25.1,<0.26.0",
    "pysilk-mod>=1.6.4,<2.0.0",
    "nonebot-plugin-localstore>=0.7.4,<0.8.0",
    "audioop-lts; python_version >= '3.13' and python_version < '4.0'",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2,<1.0.0",
    "black>=26.1.0,<27.0.0",
    "nonemoji>=0.1.4,<0.2.0",
    "pre-commit>=4.5.1,<5.0.0",
]

[project.urls]
github = "https://github.com/Autuamn/nonebot-plugin-dcqq-relay"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "I",
    "F",
    "W",
    "E",
    "UP",
    "ASYNC",
    "B",
    "C4",
    "T10",
    "T20",
    "PYI",
    "PT",
    "Q",
    "SIM",
    "TID",
    "RUF",
]
ignore = ["E402", "B008", "B030", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
extra-standard-library = ["typing_extensions"]
combine-as-imports = true
order-by-type = true
relative-imports-order = "closest-to-furthest"
section-order = [
    "future",
    "standard-library",
    "first-party",
    "third-party",
    "local-folder",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pyright]
typeCheckingMode = "standard"
reportPrivateImportUsage = false
reportShadowedImports = false
disableBytesTypePromotions = true
pythonPlatform = "All"
pythonVersion = "3.10"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
